[package]
name = "net_battle_server"
version = "0.1.0"
authors = ["Arthur <arthurcose@gmail.com>"]
edition = "2018"
license = "GPL"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
async-std = "1.9"
byteorder = "1.4.2"
uuid = { version = "0.8.2", features = ["v4"] }
rlua = "0.17.0"
clap = "2.33.3"
minidom = "0.12.0"
itertools = "0.10.0"
