[package]
name = "net_battle_server"
version = "0.1.0"
authors = ["Arthur <arthurcose@gmail.com>"]
edition = "2021"
license = "GPL-3.0"
default-run = "net_battle_server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
async-std = "1.9"
futures = "0.3"
surf = "2.2"
byteorder = "1.4"
uuid = { version = "0.8", features = ["v4"] }
rlua = "0.17"
clap = "2.33"
minidom = "0.12"
itertools = "0.10"
multi_mut = "0.1.3"
base64 = "0.13.0"
rand = "0.8"
zip = "0.5"
closure = "0.3"
log = "0.4.17"
colored = "2.0.0"
fs_extra = "1.2"
